[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ProjectListItem.gd" type="Script" id=1]
[ext_resource path="res://src/dialogs/InstallDialog.tscn" type="PackedScene" id=2]

[node name="ProjectListItem" type="HBoxContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_constants/separation = 10
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_right = 50.0
margin_bottom = 580.0
rect_min_size = Vector2( 50, 50 )
stretch_mode = 1

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 274.0
margin_right = 1004.0
margin_bottom = 306.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 944.0
margin_bottom = 14.0

[node name="Name" type="Label" parent="VBox/HBox"]
margin_right = 940.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Version" type="LinkButton" parent="VBox/HBox"]
margin_left = 944.0
margin_right = 944.0
margin_bottom = 14.0

[node name="Path" type="Label" parent="VBox"]
modulate = Color( 1, 1, 1, 0.752941 )
margin_top = 18.0
margin_right = 944.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="InstallDialog" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 804.0
margin_right = 1004.0
margin_bottom = 580.0
[connection signal="draw" from="." to="." method="_custom_draw"]
[connection signal="pressed" from="VBox/HBox/Version" to="." method="_on_show_version"]
